      \code{fitCopula()} is now \code{"L-BFGS-B"}.

      \item When \code{fitCopula(*, estimate.variance=TRUE)} fails during
      \code{optim(*, hessian=TRUE)}, a \code{warning()} is signalled, and
      kept as attribute of the \code{NA}-valued vcov matrix.

      Similarly when the hessian inversion fails, the warning message is
      now returned with the \code{NA}-valued vcov matrix.
    }
  }
  \subsection{Bug Fixes}{
    \itemize{
      \item \code{fitCopula(*, estimate.variance=FALSE)} now returns a
      \eqn{0 x 0} matrix as slot \code{@ var.est} in all cases.

      \item tweaks some of the regression tests.

      \item For mixture copulas (\code{mixCopula(.)}) estimation by
      \code{fm <- fitCopula(*, estimate.variance=TRUE)} now is more reasonable:
      \code{summary(fm)} and \code{vcov(fm)} still stay in the w-space and
      currently return a warning about not-yet implemented Jacobian
      delta-method.
      \code{coef()}, \code{vcov()}, and \code{summary(fm)} now all have an
      optional argument \code{orig = TRUE}, which when set to false will
      provide results on the \sQuote{l-scale} aka \sQuote{lambda-scale}
      (instead of the original \sQuote{w-scale}) for the weights, such that
      inference on the \sQuote{l-scale} is available.
    }
  }
}

\section{Changes in version 1.0-0 (2020-05-19, svn r1839)}{
  \subsection{New Features}{
    \itemize{
      \item \code{mixCopula()} objects can now be fit (by
      \code{fitCopula()}) more generally, as the weights no longer need to
      be kept fixed, thanks to Maechler's \code{clr1()} parametrization,
      and Rebecca Morger's B.Sc thesis. % -> % norMmix pkg

      \item When no \code{start} parameter vector is specified in
      \code{fitCopula()}, the new (generic) function \code{getIniParam()} is
      used now; it notably has a method for \code{"mixCopula"} copulas.

      \item In the \code{fitCopula*()} functions, the \code{traceOpt}